fixed several code issues found by sonar (#2113)
* fixed several code issues found by sonar

Signed-off-by: Julius Lauterbach <julius.lauterbach@t-online.de>

* fix for Bip44WalletUtils

Signed-off-by: Julius Lauterbach <julius.lauterbach@t-online.de>

---------

Signed-off-by: Julius Lauterbach <julius.lauterbach@t-online.de>