@@ -200,7 +200,7 @@ public class AbiDefinition {
     }
 
     public static class NamedType {
-        private static String DEFAULT_INTERNAL_TYPE = "";
+        private static final String DEFAULT_INTERNAL_TYPE = "";
 
         private String name;
         private String type;
@@ -348,6 +348,6 @@ public class AbiDefinition {
     }
 
     private static List<NamedType> clone(final List<NamedType> from) {
-        return from.stream().map(NamedType::new).collect(Collectors.toList());
+        return from.stream().map(NamedType::new).toList();
     }
 }
